Fixed title on mobile display

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,3 +3,38 @@
   padding: 0;
   margin: 0;
 }
+
+@media (prefers-reduced-motion: no-preference) {
+  @keyframes entranceTitle {
+    from {
+      opacity: 0;
+      transform: translateY(100px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  @keyframes entranceSubtitle {
+    from {
+      opacity: 0;
+      transform: translateY(50px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  @keyframes entranceButton {
+    from {
+      opacity: 0;
+      transform: translateY(25px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+}
